// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breadcrumb normal 1`] = `
<nav
  className="breadcrumb "
>
  <ul>
    <li
      className=""
    >
      <a>
        Bulma
      </a>
    </li>
    <li
      className=""
    >
      <a>
        Documentation
      </a>
    </li>
    <li
      className=""
    >
      <a>
        Componentes
      </a>
    </li>
    <li
      className=""
    >
      <a>
        BreadCrumb
      </a>
    </li>
  </ul>
</nav>
`;

exports[`breadcrumb positions 1`] = `
Array [
  <nav
    className="breadcrumb is-centered"
  >
    <ul>
      <li
        className=""
      >
        <a>
          Bulma
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Documentation
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Componentes
        </a>
      </li>
      <li
        className=""
      >
        <a>
          BreadCrumb
        </a>
      </li>
    </ul>
  </nav>,
  ",",
  <nav
    className="breadcrumb is-right"
  >
    <ul>
      <li
        className=""
      >
        <a>
          Bulma
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Documentation
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Componentes
        </a>
      </li>
      <li
        className=""
      >
        <a>
          BreadCrumb
        </a>
      </li>
    </ul>
  </nav>,
]
`;

exports[`breadcrumb separators 1`] = `
Array [
  <nav
    className="breadcrumb has-arrow-separator"
  >
    <ul>
      <li
        className=""
      >
        <a>
          Bulma
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Documentation
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Componentes
        </a>
      </li>
      <li
        className=""
      >
        <a>
          BreadCrumb
        </a>
      </li>
    </ul>
  </nav>,
  <nav
    className="breadcrumb has-bullet-separator"
  >
    <ul>
      <li
        className=""
      >
        <a>
          Bulma
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Documentation
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Componentes
        </a>
      </li>
      <li
        className=""
      >
        <a>
          BreadCrumb
        </a>
      </li>
    </ul>
  </nav>,
  <nav
    className="breadcrumb has-dot-separator"
  >
    <ul>
      <li
        className=""
      >
        <a>
          Bulma
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Documentation
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Componentes
        </a>
      </li>
      <li
        className=""
      >
        <a>
          BreadCrumb
        </a>
      </li>
    </ul>
  </nav>,
  <nav
    className="breadcrumb has-succeeds-separator"
  >
    <ul>
      <li
        className=""
      >
        <a>
          Bulma
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Documentation
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Componentes
        </a>
      </li>
      <li
        className=""
      >
        <a>
          BreadCrumb
        </a>
      </li>
    </ul>
  </nav>,
]
`;

exports[`breadcrumb sizes 1`] = `
Array [
  <nav
    className="breadcrumb is-small"
  >
    <ul>
      <li
        className=""
      >
        <a>
          Bulma
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Documentation
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Componentes
        </a>
      </li>
      <li
        className=""
      >
        <a>
          BreadCrumb
        </a>
      </li>
    </ul>
  </nav>,
  <nav
    className="breadcrumb is-medium"
  >
    <ul>
      <li
        className=""
      >
        <a>
          Bulma
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Documentation
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Componentes
        </a>
      </li>
      <li
        className=""
      >
        <a>
          BreadCrumb
        </a>
      </li>
    </ul>
  </nav>,
  <nav
    className="breadcrumb is-large"
  >
    <ul>
      <li
        className=""
      >
        <a>
          Bulma
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Documentation
        </a>
      </li>
      <li
        className=""
      >
        <a>
          Componentes
        </a>
      </li>
      <li
        className=""
      >
        <a>
          BreadCrumb
        </a>
      </li>
    </ul>
  </nav>,
]
`;

exports[`breadcrumb with href 1`] = `
<nav
  className="breadcrumb "
>
  <ul>
    <li
      className=""
    >
      <a
        href="https://ufsc.br"
      >
        Bulma
      </a>
    </li>
    <li
      className=""
    >
      <a
        href="https://ufsc.br"
      >
        Documentation
      </a>
    </li>
    <li
      className=""
    >
      <a
        href="https://ufsc.br"
      >
        Componentes
      </a>
    </li>
    <li
      className=""
    >
      <a
        href="https://ufsc.br"
      >
        BreadCrumb
      </a>
    </li>
  </ul>
</nav>
`;

exports[`breadcrumb with icons 1`] = `
<nav
  className="breadcrumb "
>
  <ul>
    <li
      className=""
    >
      <a>
        <span>
          Bulma
        </span>
        <span
          className="icon"
        >
          <i
            aria-hidden="true"
            className="fas fa-home"
          />
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a>
        <span>
          Documentation
        </span>
        <span
          className="icon"
        >
          <i
            aria-hidden="true"
            className="fas fa-book"
          />
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a>
        <span>
          Componentes
        </span>
        <span
          className="icon"
        >
          <i
            aria-hidden="true"
            className="fas fa-puzzle-piece"
          />
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a>
        <span>
          BreadCrumb
        </span>
        <span
          className="icon"
        >
          <i
            aria-hidden="true"
            className="fas fa-thumbs-up"
          />
        </span>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`breadcrumb with internal onClick 1`] = `
<nav
  className="breadcrumb "
>
  <ul>
    <li
      className=""
    >
      <a
        onClick={[Function]}
      >
        Bulma
      </a>
    </li>
    <li
      className=""
    >
      <a
        onClick={[Function]}
      >
        Documentation
      </a>
    </li>
    <li
      className=""
    >
      <a
        onClick={[Function]}
      >
        Componentes
      </a>
    </li>
    <li
      className=""
    >
      <a
        onClick={[Function]}
      >
        BreadCrumb
      </a>
    </li>
  </ul>
</nav>
`;

exports[`breadcrumb with onCLick on component Icon 1`] = `
<nav
  className="breadcrumb "
>
  <ul>
    <li
      className=""
    >
      <a
        onClick={[Function]}
      >
        Bulma
      </a>
    </li>
    <li
      className=""
    >
      <a
        onClick={[Function]}
      >
        Documentation
      </a>
    </li>
    <li
      className=""
    >
      <a
        onClick={[Function]}
      >
        Componentes
      </a>
    </li>
    <li
      className=""
    >
      <a
        onClick={[Function]}
      >
        BreadCrumb
      </a>
    </li>
  </ul>
</nav>
`;

exports[`breadcrumb with onCLick on component Icon 2`] = `
<nav
  className="breadcrumb "
>
  <ul>
    <li
      className=""
    >
      <a>
        Bulma
      </a>
    </li>
    <li
      className=""
    >
      <a>
        Documentation
      </a>
    </li>
    <li
      className=""
    >
      <a>
        Componentes
      </a>
    </li>
    <li
      className=""
    >
      <a>
        BreadCrumb
      </a>
    </li>
  </ul>
</nav>
`;

exports[`breadcrumb with onCLick on component Icon 3`] = `
<nav
  className="breadcrumb "
>
  <ul>
    <li
      className=""
    >
      <a
        href="https://ufsc.br"
        onClick={[Function]}
      >
        <span>
          Bulma
        </span>
        <span
          className="icon"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="fas fa-home"
          />
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        href="https://ufsc.br"
        onClick={[Function]}
      >
        <span>
          Documentation
        </span>
        <span
          className="icon"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="fas fa-book"
          />
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        href="https://ufsc.br"
        onClick={[Function]}
      >
        <span>
          Componentes
        </span>
        <span
          className="icon"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="fas fa-puzzle-piece"
          />
        </span>
      </a>
    </li>
    <li
      className=""
    >
      <a
        href="https://ufsc.br"
        onClick={[Function]}
      >
        <span>
          BreadCrumb
        </span>
        <span
          className="icon"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="fas fa-thumbs-up"
          />
        </span>
      </a>
    </li>
  </ul>
</nav>
`;
